--- a/.github/workflows/publish-beta.yaml
+++ b/.github/workflows/publish-beta.yaml
@@ -16,5 +16,7 @@ jobs:
           java-version: 17
       - name: Grant permissions to Gradle
         run: chmod +x gradlew
-      - name: Publish with Gradle
-        run: ./gradlew :publishAll -Pcreds.maven.user='${{ secrets.MAVEN_REPO_USER }}' -Pcreds.maven.key='${{ secrets.MAVEN_REPO_PASS }}' -Pcreds.ext.key='${{ secrets.EXTENSION_REPO_KEY }}' -Dorg.gradle.jvmargs=-Xmx512m
+      - name: Setup build cache
+        run: ./gradlew
+      - name: Publish with Gradle -Dorg.gradle.jvmargs=-Xmx4096m
+        run: ./gradlew :publishAll -Pcreds.maven.user='${{ secrets.MAVEN_REPO_USER }}' -Pcreds.maven.key='${{ secrets.MAVEN_REPO_PASS }}' -Pcreds.ext.key='${{ secrets.EXTENSION_REPO_KEY }}' -Dorg.gradle.jvmargs=-Xmx4096m
