Github actions update.

--- a/.github/workflows/publish-beta.yaml
+++ b/.github/workflows/publish-beta.yaml
@@ -17,6 +17,7 @@ jobs:
       - name: Grant permissions to Gradle
         run: chmod +x gradlew
       - name: Setup build cache
-        run: ./gradlew
+        run: ./gradlew --stacktrace
       - name: Publish with Gradle -Dorg.gradle.jvmargs=-Xmx4096m
+        if: always()
         run: ./gradlew :publishAll -Pcreds.maven.user='${{ secrets.MAVEN_REPO_USER }}' -Pcreds.maven.key='${{ secrets.MAVEN_REPO_PASS }}' -Pcreds.ext.key='${{ secrets.EXTENSION_REPO_KEY }}' -Dorg.gradle.jvmargs=-Xmx4096m
