--- a/.github/workflows/publish-beta.yaml
+++ b/.github/workflows/publish-beta.yaml
@@ -17,7 +17,8 @@ jobs:
       - name: Grant permissions to Gradle
         run: chmod +x gradlew
       - name: Setup build cache
-        run: ./gradlew --stacktrace
-      - name: Publish with Gradle -Dorg.gradle.jvmargs=-Xmx4096m
+        run: ./gradlew  -Dorg.gradle.jvmargs=-Xmx4096m
+        continue-on-error: true
+      - name: Publish with Gradle
         if: always()
         run: ./gradlew :publishAll -Pcreds.maven.user='${{ secrets.MAVEN_REPO_USER }}' -Pcreds.maven.key='${{ secrets.MAVEN_REPO_PASS }}' -Pcreds.ext.key='${{ secrets.EXTENSION_REPO_KEY }}' -Dorg.gradle.jvmargs=-Xmx4096m
