--- a/minecraft/tests/blackbox/extension.toml
+++ b/minecraft/tests/blackbox/extension.toml
@@ -1,5 +1,5 @@
 [parents]
-minecraft = { group = "dev.extframework.core", version = "1.0.3-BETA", use = "local" }
-access-tweaks = {group = "dev.extframework.extension", version = "1.0.3-BETA", use = "local"}
+minecraft = { group = "dev.extframework.core", version = "1.0.3-BETA", use = "central" }
+access-tweaks = {group = "dev.extframework.extension", version = "1.0.3-BETA", use = "central"}
 #fabric-mappings = { group = "dev.extframework.integrations", version = "1.0-BETA", use = "local" }
 #mcp-mappings = {group = "dev.extframework.extension", version = "1.0.4-BETA", use = "local"}
